# GEOC

./: .gitignore  CMakeLists.txt  README.md
app/: CMakeLists.txt
app/image-estimator/: CMakeLists.txt  image-estimator.cpp
ext-projects/: ExtProjects.cmake
ext-projects/cmake-files/: GCurve.cmake
lab/test/: CMakeLists.txt  testGeoc.cpp
lab/test/include/: TestConvergence.h
lab/test/src/: testConvergence.cpp
modules/adapter/: CMakeLists.txt
modules/adapter/include/geoc/adapter/: GluedCurve.h  GluedCurve.hpp  GridCurve.h  GridCurve.hpp
modules/adapter/include/geoc/adapter/base/: EstimatorDeducer.h  GeneralAdapter.h  GeneralAdapter.hpp
modules/adapter/include/geoc/adapter/deducers/: EstimatorDeducer.h  ParameterDeducer.h
modules/adapter/include/geoc/adapter/patch/: SCellToPoint.h
modules/adapter/src/: GluedCurveOLD.hpp
modules/api/: CMakeLists.txt
modules/api/include/geoc/api/: api.h
modules/api/include/geoc/api/gluedCurve/: Curvature.hpp  Length.hpp  Tangent.hpp
modules/api/include/geoc/api/gridCurve/: Curvature.hpp  Length.hpp  Tangent.hpp
modules/estimator/: CMakeLists.txt
modules/estimator/include/geoc/estimator/adaptable/: Curvature.h  Tangent.h
modules/estimator/include/geoc/estimator/adaptable/base/: HMDCAEstimator.h  HMDCAEstimator.hpp  LMDCAEstimator.h  LMDCAEstimator.hpp
modules/estimator/include/geoc/estimator/adaptable/curvature/: HMDCA.hpp  II.hpp  LMDCA.hpp  MDCA.hpp
modules/estimator/include/geoc/estimator/adaptable/tangent/: LMDSS.h  MDSS.h
modules/estimator/include/geoc/estimator/alternative/: Curvature.h  Curvature.hpp  Tangent.h  Tangent.hpp
modules/estimator/include/geoc/estimator/base/: DCALambdaEstimator.h  DCALambdaEstimator.hpp  HDCAEstimator.h  HDCAEstimator.hpp
modules/estimator/include/geoc/estimator/non-adaptable/length/: Projected.hpp  SinCos.hpp
modules/estimator/include/geoc/estimator/standard/: Curvature.h  Curvature.hpp  Tangent.h  Tangent.hpp
modules/estimator/src/: temp.cpp
modules/test/: CMakeLists.txt  testEstimator.cpp
modules/test/src/: testConvergence.cpp
